# bolao-copa

backend/: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
backend/src/: main.py  models.py  schemas.py
backend/src/api/v1/: api.py
backend/src/api/v1/endpoints/: admin.py  auth.py  groups.py  guesses.py  users.py
backend/src/core/: db.py  security.py
backend/src/services/: points_engine.py
frontend_bolao/: package-lock.json  package.json
frontend_bolao/app/: layout.tsx  page.tsx
frontend_bolao/app/dashboard/: page.tsx
frontend_bolao/app/dashboard/group/[id]/: page.tsx
frontend_bolao/app/dashboard/tournament/: page.tsx
frontend_bolao/app/lib/: api.ts
frontend_bolao/app/login/: page.tsx
