[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Moi10legend",email = "moisesflopesf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "sqlmodel (>=0.0.38,<0.0.39)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false